# babyhelm-api

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  tox.ini
alembic/: README  env.py
alembic/versions/: 0991edb65fa4_add_application_and_project_and_users.py  2. add_project_and_application_tables.py  2024_06_23_11:51_add_application_and_project_and_users.py  2024_06_23_12_01_add_application_and_project_and_users.py  2024_06_23_14:29_add_application_and_project_and_users.py  2024_06_23_19_53_rename_password.py  2024_06_25_14_48_add_workloads_in_applications.py  2024_07_10_17_29_add_user_role_to_users_projects.py  2024_07_10_17_38_alter_constraints_to_role.py  46602c7f481c_add_application_image.py  5966b49e3cc7_create_user_model.py  69ae9c88ccdc_add_project_and_application_tables.py  deebc1cd5c05_add_user_model.py
babyhelm/: app.py
babyhelm/containers/: application.py  gateways.py  repositories.py  services.py
babyhelm/exception_handlers/: __init__.py  cluster_manager_error.py
babyhelm/exceptions/: __init__.py  auth.py  base.py  cluster_manager.py  http.py
babyhelm/gateways/: database.py
babyhelm/models/: __init__.py  application.py  associations.py  mixins.py  project.py  user.py
babyhelm/repositories/: application.py  project.py  user.py
babyhelm/routers/: __init__.py  cluster_manager.py  manifest_builder.py  test.py  user.py
babyhelm/routers/cluster_manager/: __init__.py  applications.py  projects.py
babyhelm/schemas/: auth.py  cluster_manager.py  manifest_builder.py  namespace.py  user.py
babyhelm/services/: auth.py  cluster_manager.py  manifest_builder.py  user.py
babyhelm/services/auth/: dependencies.py  service.py  utils.py
babyhelm/templates/: deployment.j2  hpa.j2  namespace.j2  service.j2
config/: config.dev.yaml  config.test.yaml
config/babyhelm/: Chart.yaml  values.yaml
config/babyhelm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  job.yaml  secret.yaml  service.yaml
splunk/: install_tools.yml  setup_splunk.yml
tests/: conftest.py
tests/unit/: test_cluster_manager.py  test_manifest_builder.py  test_user.py
