[tool.poetry]
name = "babyhelm"
version = "0.1.1"
description = "Babyhelm project backend"
authors = ["i.shamsutdinov", "n.bagrov", "s.lekhtin", "e.solodovnikov", "e.salnikov"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.scripts]
babyhelm-server = "babyhelm.app:main"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
dependency-injector = "^4.41.0"
jinja2 = "^3.1.4"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
pytest = "^8.2.2"
taskipy = "^1.12.2"

[tool.taskipy.tasks]
babyhelm-dev = { cmd = "babyhelm-server --config ./local/config.dev.yaml --reload --log-level=debug", help = "Start BabyHelm dev server" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "tests/*",
]